plugins/file-open-save/core/src/main/javascript/app/components/breadcrumb/breadcrumb.css
/*!
 * PENTAHO CORPORATION PROPRIETARY AND CONFIDENTIAL
 *
 * Copyright 2017 Pentaho Corporation (Pentaho). All rights reserved.
 *
 * NOTICE: All information including source code contained herein is, and
 * remains the sole property of Pentaho and its licensors. The intellectual
 * and technical concepts contained herein are proprietary and confidential
 * to, and are trade secrets of Pentaho and may be covered by U.S. and foreign
 * patents, or patents in process, and are protected by trade secret and
 * copyright laws. The receipt or possession of this source code and/or related
 * information does not convey or imply any rights to reproduce, disclose or
 * distribute its contents, or to manufacture, use, or sell anything that it
 * may describe, in whole or in part. Any reproduction, modification, distribution,
 * or public display of this information without the express written authorization
 * from Pentaho is strictly prohibited and in violation of applicable laws and
 * international treaties. Access to the source code contained herein is strictly
 * prohibited to anyone except those individuals and entities who have executed
 * confidentiality and non-disclosure agreements or other agreements with Pentaho,
 * explicitly covering such access.
 */

/* BREADCRUMB */
breadcrumb {
	color: #005DA6;
}

breadcrumb .breadcrumbItem {
  float: left;
  user-select: none;
  -webkit-user-select: none; /* webkit (safari, chrome) browsers */
  -moz-user-select: none; /* mozilla browsers */
  -ms-user-select: none; /* IE10+ */
}

breadcrumb .breadcrumbFolder {
  cursor: pointer;
  display: inline-block;
}

breadcrumb .breadcrumbFolder.extra {
  position: relative;
}

breadcrumb .breadcrumbFolder.extra .breadcrumbExtra {
  top: 20px;
  left: -10px;
  position: absolute;
  background-color: #ffffff;
  -moz-box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.4);
  -webkit-box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.4);
  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.4);
  padding: 5px 0;
  max-width: 300px;
  z-index: 100;
  border: 1px solid #F2F2F2;
}

breadcrumb .breadcrumbFolder.extra .breadcrumbExtraItem {
  padding: 5px 10px 5px 10px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

breadcrumb .breadcrumbFolder.extra .breadcrumbExtraItem:hover {
  background-color: #E6EFF6;
}

breadcrumb .breadcrumbNext {
  background: url("../../images/chevron_right_tree.svg") no-repeat left center;
  width: 7px;
  height: 19px;
  margin-left: 10px;
  margin-right: 10px;
  display: inline-block;
  vertical-align: bottom;
}

breadcrumb .breadcrumbNext.last {
  visibility: hidden;
}

breadcrumb .breadcrumbFolder.last {
  color: #212121;
  cursor: default;
}

